// Vitest Snapshot v1

exports[`Auth Mediator > Create New User 1`] = `
{
  "companyName": "Riverbend Golf Community",
  "email": "curtis@gmail.com",
  "firstName": "Curtis",
  "lastName": "Knudson",
  "password": "testpassword",
  "userId": Any<String>,
}
`;

exports[`Auth Mediator > Create New User 2`] = `"Thu Jun 23 2022 16:56:28 GMT-0600 (Mountain Daylight Time)"`;

exports[`Auth Mediator > UserLogin 1`] = `
{
  "companyName": "Riverbend Golf Community",
  "email": "curtis@gmail.com",
  "firstName": "Curtis",
  "lastName": "Knudson",
  "userId": "123456789",
}
`;
